<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.yourmealplanner.viewmodel.SharedViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundLight"
    tools:context=".view.after.EditProfileFragment">

    <EditText
        android:id="@+id/weight"
        style="@style/StyledTilEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/weight_label" />

    <EditText
        android:id="@+id/height"
        style="@style/StyledTilEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/height_label" />

    <EditText
        android:id="@+id/age"
        style="@style/StyledTilEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@color/white"
        android:inputType="number"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/age_label" />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:spinnerMode="dropdown"/>

    <Spinner
        android:id="@+id/spinner_diet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:spinnerMode="dropdown"/>

    <Spinner
        android:id="@+id/spinner_activity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:spinnerMode="dropdown"/>

    <Spinner
        android:id="@+id/spinner_intolerances"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:spinnerMode="dropdown"/>

    <androidx.constraintlayout.widget.Placeholder
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        />

    <Button
        android:background="@color/backgroundDark"
        android:textColor="@color/white"
        android:id="@+id/save_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save"
        android:onClick="@{()->viewmodel.saveInfo()}"
        />

</LinearLayout>
</layout>